fixed layout overflow

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1421,9 +1421,6 @@ select {
 .mr-4 {
   margin-right: 1rem;
 }
-.mr-5 {
-  margin-right: 1.25rem;
-}
 .mt-0 {
   margin-top: 0px;
 }
@@ -1546,9 +1543,6 @@ select {
 }
 .max-h-\[600px\] {
   max-height: 600px;
-}
-.max-h-\[70vh\] {
-  max-height: 70vh;
 }
 .min-h-full {
   min-height: 100%;
@@ -2862,9 +2856,6 @@ select {
 }
 .pt-8 {
   padding-top: 2rem;
-}
-.pb-10 {
-  padding-bottom: 2.5rem;
 }
 .text-left {
   text-align: left;
